# Tachimi-_Standalone

./: .gitignore  Claude.md  package-lock.json  package.json
.github/workflows/: release.yml
.tauri/: tachimi.key.pub
src/: index.html  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  processor_backup.rs
src-tauri/src/processor/: cache.rs  image_loader.rs  image_processing.rs  jpeg.rs  mod.rs  types.rs
src-tauri/src/processor/pdf/: common.rs  mod.rs  single.rs  spread.rs
src-tauri/windows/: hooks.nsh
src/js/: main.js
src/js/core/: app-state.js  events.js  state.js  tauri-api.js
src/js/features/: constants.js  crop-mode.js  execution.js  feature-unlock.js  file-handling.js  guides.js  json-modal.js  json-parsing.js  json-register.js  output-panels.js  preview.js  settings.js  undo-redo.js  update-system.js  work-info.js
src/js/ui/: alerts.js  loading-overlay.js  overlay.js
src/js/utils/: dom.js  formatters.js  storage.js
src/styles/: main.css
src/styles/components/: drop-zone.css
src/styles/utilities/: variables.css
